--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 </head>
 
 <body>
+    <!-- In your index.html -->
+    <div id="enemyHealth" style="position: fixed; top: 10px; left: 10px; color: white; font-size: 20px;">
+        Enemy Health: 100
+    </div>
+    <div id="playerHealth" style="position: fixed; top: 40px; left: 10px; color: white; font-size: 20px;">
+        Player Health: 100
     <script type="module" src="/main.js"></script>
 </body>
 
